--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>BAB I PENDAHULUAN ~ Courses </title>
+    <link rel="icon" href="src/img/icon.jpg" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -22,7 +23,7 @@
     <nav class="border-gray-200 rounded bg-blue-100 shadow dark:bg-gray-800 dark:border-gray-700">
         <div class="container flex items-center justify-center p-6 mx-auto text-gray-600 capitalize dark:text-gray-300">
             <!-- img src/img/unp.png -->
-            <a href="/" class="">
+            <a href="index.html" class="">
                 <img class="w-auto h-9 sm:h-11" src="src/img/unp.png" alt="UNIVERSITAS PUTERA BATAM">
             </a>
             <a href="index.html" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-300 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6">Home</a>
@@ -40,25 +41,25 @@
         </div>
     </nav>
     <div class="text-center overflow-x-auto overflow-y-hidden border-gray-200 whitespace-nowrap dark:border-gray-700">
-        <button class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-blue-600 bg-transparent border-b-2 border-blue-500 sm:text-base dark:border-blue-400 dark:text-blue-300 whitespace-nowrap focus:outline-none">
+        <a class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-blue-600 bg-transparent border-b-2 border-blue-500 sm:text-base dark:border-blue-400 dark:text-blue-300 whitespace-nowrap focus:outline-none">
             BAB 1
-        </button>
+        </a>
     
-        <button class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
-            <a href="bab1-1.html">BAB 1.1</a>
-        </button>
+        <a href="bab1-1.html" class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
+            BAB 1.1
+        </a>
     
-        <button class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
-            <a href="bab1-2.html">BAB 1.2</a>
-        </button>
+        <a href="bab1-2.html" class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
+            BAB 1.2
+        </a>
 
-        <button class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
-            <a href="bab1-3.html">BAB 1.3</a>
-        </button>
+        <a href="bab1-3.html" class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
+            BAB 1.3
+        </a>
 
-        <button class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
-            <a href="bab1-4.html">BAB 1.4</a>
-        </button>
+        <a href="bab1-4.html" class="inline-flex items-center h-10 px-4 -mb-px text-sm text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:text-base dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
+            BAB 1.4
+        </a>
     </div>
     <!-- <div class="container flex-wrap flex px-12 py-7 mx-auto bg-slate-100 dark:bg-gray-800"> -->
     <div class="container flex-wrap flex px-12 py-7 max-w-md mx-auto bg-slate-100 dark:bg-gray-800 rounded-xl shadow-md overflow-hidden md:max-w-7xl">
