--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>Home Pages ~ Welcome To my website.</title>
+    <link rel="icon" href="src/img/icon.jpg" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
             tailwind.config = {
@@ -28,7 +29,7 @@
     <nav class="border-gray-200 rounded bg-blue-100 shadow dark:bg-gray-800 dark:border-gray-700">
         <div class="container flex-wrap flex items-center justify-center p-6 mx-auto text-gray-600 capitalize dark:text-gray-300">
             <!-- img src/img/unp.png -->
-            <a href="/" class="flex">
+            <a href="index.html" class="flex">
                 <img class="w-auto h-9 sm:h-11" src="src/img/unp.png" alt="UNIVERSITAS PUTERA BATAM">
             </a>
             <a href="#" class="text-gray-800 transition-colors duration-300 transform dark:text-gray-200 border-b-2 border-blue-500 mx-1.5 sm:mx-6">home</a>
